assets/style.css
body {
  background-image: url("../assets/images/diagonal-squares.png");
  margin: 0px;
  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
  flex: 1 0 auto;
}
nav {
  width: 100%;
  background-color: white;
  position: sticky;
  border-bottom: solid 3px;
  border-color: #dddddd;
}
.navbar {
  top: 0;
  padding: 0 !important;
  height: 58px;
  max-width: 960px;
  margin: 0 auto -3px;
}
#navbar-brand {
  background-color: #4aaaa5;
  color: white;
  font-family: "Georgia", Times, Times New Roman, serif;
  font-size: 22px;
  font-weight: bold;
  text-decoration: none;
  height: 58px;
  line-height: 58px;
  padding: 0px 20px;
}

li a {
  height: 58px;
  line-height: 58px;
  width: 75px;
  color: #777777;
  text-align: center;
  padding: 0 !important;
}
.nav-item :hover {
  background-color: #dddddd;
  color: #777777;
}

#my-picture {
  height: 150px;
  margin-right: 10px;
  float: left;
}
.jumbotron h1 {
  font-family: "Georgia", Times, Times New Roman, serif;
  font-size: 32px;
  font-weight: 700;
  color: #4aaaa5;
}
.jumbotron {
  padding: 32px;
  border: 3px solid;
  border-collapse: collapse;
  border-color: #dddddd;
  margin: 20px auto;
  max-width: 960px;
}

footer {
  height: 55px;
  line-height: 55px;
  width: 100%;
  text-align: center;
  background-color: grey;
  border-top: solid 5px;
  border-color: #4aaaa5;
  position: fixed;
  left: 0;
  bottom: 0;
}

.portfolio-img {
  margin: 0 auto;
}

